# spMV-test

./: .gitignore  CMakeLists.txt  README.md  profile.sh
src/: asp.cpp  awsp.cpp  awsp_ref.cpp  kernel.cu  matrix_csr.cpp  tcsr.cpp  tester.cpp  wsp.cpp
src/include/: asp.hpp  awsp.hpp  awsp_ref.hpp  kernel.hpp  matrix_csr.hpp  ptx.hpp  tcsr.hpp  tester.hpp  wsp.hpp
src/kernels/: asp.cu  awsp.cu  awsp_ref.cu  csr_naive.cu  csr_tiling.cu  cublas.cu  naive.cu  tiling_smem.cu  wsp.cu  wsp_sm.cu
test/: main.cpp
